# modules/product_category/dto/create-product-category.go
@@ -1,0 +1,5 @@
+package product_category
+
+type CreateProductCategoryDTO struct {
+	Name string `json:"name" example:"fashion"`
+}
