# modules/product_category/response/create-product-category.go
@@ -1,0 +1,12 @@
+package product_category
+
+import models "online-shop-home-test/modules/product_category/models"
+
+type SuccessCreateProductCategoryResponse struct {
+	Data    models.ProductCategories `json:"data"`
+	Message string                   `json:"message" example:"success"`
+}
+
+type BadRequestCreateProductCategoryResponse struct {
+	Error string `json:"message" example:"error message"`
+}
